images/kube-api-proxy/local/proxy.yaml
# NOTE: copy Secret/deckhouse-registry from d8-system to the target namespace.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-api-proxy
  labels:
    heritage: storage
    app: kube-api-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-api-proxy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        heritage: storage
        app: kube-api-proxy
    spec:
      imagePullSecrets:
        - name: "deckhouse-registry"
      containers:
        - name: proxy-only
          image: "${IMAGE}"
          imagePullPolicy: Always
          command:
            - /proxy
        - name: proxy
          image: "${IMAGE}"
          imagePullPolicy: Always
          command:
            - /proxy
          ports:
            - containerPort: 24192
              name: proxy-webhook
              protocol: TCP
          volumeMounts:
            - mountPath: /tmp/proxy-webhook/serving-certs
              name: test-admission-webhook
        - name: controller
          image: "${IMAGE}"
          imagePullPolicy: Always
          command:
            - /test-controller
          ports:
            - containerPort: 9443
              name: controller
              protocol: TCP
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: test-admission-webhook
      dnsPolicy: Default
      serviceAccountName: kube-api-proxy
      volumes:
        - name: test-admission-webhook
          secret:
            secretName: test-admission-webhook
---
apiVersion: v1
kind: Service
metadata:
  name: test-admission-webhook
spec:
  ports:
    - name: admission-webhook
      port: 443
      targetPort: proxy-webhook
      protocol: TCP
  selector:
    app: kube-api-proxy
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "test-admission-webhook"
webhooks:
  - name: "vm.test-controller.validate"
    rules:
      - apiGroups: ["x.virtualization.deckhouse.io"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE", "DELETE"]
        resources: ["virtualmachines"]
        scope: "Namespaced"
    clientConfig:
      service:
        namespace: kproxy
        name: test-admission-webhook
        path: /validate-x-virtualization-deckhouse-io-v1-virtualmachine
        #path: /validate-kubevirt-io-v1-virtualmachine
        port: 443
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURPRENDQWlDZ0F3SUJBZ0lVZmFCQytkMW52WXRXcHVEVGUzTFIwTFVmUUxRd0RRWUpLb1pJaHZjTkFRRUwKQlFBd05ERXlNREFHQTFVRUF4TXBZWEJwSUhCeWIzaDVhVzVuSUhSbGMzUnpJR1p2Y2lCMllXeHBaR0YwYVc1bgpJSGRsWW1odmIyc3dIaGNOTWpRd016QTJNVEV4TkRBd1doY05Namt3TXpBMU1URXhOREF3V2pBME1USXdNQVlEClZRUURFeWxoY0drZ2NISnZlSGxwYm1jZ2RHVnpkSE1nWm05eUlIWmhiR2xrWVhScGJtY2dkMlZpYUc5dmF6Q0MKQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFPUUpxNnRUYTFIZnFkTzJoaFNZSFJDYgo1ZzhYdkVJazZzY2R1cE1N [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
